[workspace]
members = [
    "dna-to-rna-conversion",
    "two-to-one",
    "get-the-middle-character",
    "count-of-positives-slash-sum-of-negatives",
    "string-repeat",
    "toleetspeak",
    "reversed-sequence",
    "sequencesum",
    "product-of-consecutive-fib-numbers",
    "how-much",
    "moduli-number-system",
    "square-into-squares-protect-trees",
    "help-your-granny",
    "strings-mix",
]
